Inversion of control. Часть 2

--- a/pom.xml
+++ b/pom.xml
@@ -19,22 +19,24 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-context</artifactId>
-            <version>6.0.9</version>
+            <version>5.2.24.RELEASE</version>
         </dependency>
+
 
         <!-- https://mvnrepository.com/artifact/org.springframework/spring-core -->
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-core</artifactId>
-            <version>6.0.9</version>
+            <version>5.2.24.RELEASE</version>
         </dependency>
 
         <!-- https://mvnrepository.com/artifact/org.springframework/spring-beans -->
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-beans</artifactId>
-            <version>6.0.9</version>
+            <version>5.2.24.RELEASE</version>
         </dependency>
+
 
     </dependencies>
 </project>
