--- a/pom.xml
+++ b/pom.xml
@@ -59,13 +59,12 @@
             <version>6.0.6.Final</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.hibernate.orm/hibernate-core -->
         <dependency>
-            <groupId>org.hibernate</groupId>
+            <groupId>org.hibernate.orm</groupId>
             <artifactId>hibernate-core</artifactId>
-            <version>5.5.5.Final</version>
+            <version>6.2.4.Final</version>
         </dependency>
-        <!-- Thanks for using https://jar-download.com -->
-
 
     </dependencies>
 </project>
