--- a/pom.xml
+++ b/pom.xml
@@ -5,6 +5,10 @@
   <artifactId>spring_course_mvc</artifactId>
   <packaging>war</packaging>
   <version>1.0-SNAPSHOT</version>
+  <properties>
+    <maven.compiler.source>11</maven.compiler.source>
+    <maven.compiler.target>11</maven.compiler.target>
+  </properties>
   <name>spring_course_mvc Maven Webapp</name>
   <url>http://maven.apache.org</url>
   <dependencies>
@@ -19,28 +23,28 @@
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-context</artifactId>
-      <version>6.0.9</version>
+      <version>5.2.24.RELEASE</version>
     </dependency>
 
     <!-- https://mvnrepository.com/artifact/org.springframework/spring-core -->
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-core</artifactId>
-      <version>6.0.6</version>
+      <version>5.2.24.RELEASE</version>
     </dependency>
 
     <!-- https://mvnrepository.com/artifact/org.springframework/spring-beans -->
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-beans</artifactId>
-      <version>6.0.9</version>
+      <version>5.2.24.RELEASE</version>
     </dependency>
 
     <!-- https://mvnrepository.com/artifact/org.springframework/spring-webmvc -->
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-webmvc</artifactId>
-      <version>6.0.9</version>
+      <version>5.2.24.RELEASE</version>
     </dependency>
 
     <!-- https://mvnrepository.com/artifact/javax.servlet/jstl -->
