--- a/pom.xml
+++ b/pom.xml
@@ -61,5 +61,15 @@
   </dependencies>
   <build>
     <finalName>spring_course_mvc_hibernate_aop</finalName>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <configuration>
+          <source>6</source>
+          <target>6</target>
+        </configuration>
+      </plugin>
+    </plugins>
   </build>
 </project>
