--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,13 @@
       <version>5.3.27</version>
     </dependency>
 
+    <!-- https://mvnrepository.com/artifact/org.aspectj/aspectjweaver -->
+    <dependency>
+      <groupId>org.aspectj</groupId>
+      <artifactId>aspectjweaver</artifactId>
+      <version>1.9.19</version>
+    </dependency>
+
 
   </dependencies>
 <!--  <build>-->
