--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,13 @@
       <version>5.3.13.RELEASE</version>
     </dependency>
 
+    <!-- https://mvnrepository.com/artifact/org.springframework.security/spring-security-taglibs -->
+    <dependency>
+      <groupId>org.springframework.security</groupId>
+      <artifactId>spring-security-taglibs</artifactId>
+      <version>5.3.13.RELEASE</version>
+    </dependency>
+
   </dependencies>
   <build>
     <finalName>security</finalName>
